# gaussian-process-state-space-models

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  py.py  pyproject.toml
benchmarks/: base
benchmarks/baselines/: ekf.py
benchmarks/synthetic/: pendulum_benchmark.py
docs/source/: api.rst  conf.py  index.rst
gpssm/: __init__.py
gpssm/datasets/: __init__.py  real_world.py  synthetic.py
gpssm/filters/: __init__.py  kalman.py  particle.py
gpssm/inference/: __init__.py  elbo.py  inducing.py  recognition.py
gpssm/kernels/: __init__.py  base.py  matern.py  periodic.py  polynomial.py  rbf.py  spectral_mixture.py
gpssm/models/: __init__.py  base.py  free_form.py  gpssm.py  linear.py  online.py  variational.py
gpssm/tests/: __init__.py
gpssm/tests/unit/: test_datasets.py  test_filters.py  test_io.py  test_kernels.py  test_models.py  test_periodic_kernel.py  test_random_utils.py  test_recognition.py  test_utils.py
gpssm/utils/: __init__.py  config.py  diagnostics.py  io.py  metrics.py  random.py  visualization.py
scripts/evaluation/: eval.py
scripts/experiments/: run_random_experiments.py
scripts/training/: cli_train.py  train.py
scripts/visualization/: plot_results.py
tutorials/: 01_getting_started.md  02_model_selection.md  03_uncertainty_quantification.md  04_advanced_topics.md
