[project]
name = "gpssm"
version = "0.1.0"
description = "Gaussian Process State Space Models for time-series modeling and inference."
authors = [ { name = "Zitouni Nidhal" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0"
]

[project.urls]
"Homepage" = "https://github.com/ZitouniNidhal/gaussian-process-state-space-models"
